--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -41,6 +41,7 @@
 
         <button
           type="submit"
+          id="submit-button"
           class="btn btn-primary btn-lg btn-block"
           style="width: 542px;"
           [disabled]="!loginForm.valid"
